--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Monserrat"; ;
+    src: url('/assets/fonts/Monserrat/Monserrat-Medium.ttf') format('truetype');
+  }
+}
