--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -1,11 +1,14 @@
-<div class="swiper" #swuiperDiv>
+<div class="swiper" #swiperDiv>
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
      @for (image of images(); track $index) {
       <div class="swiper-slide">
-        <img [src]="image | productImage" alt="Producto"
-          class="object-cover w-full h-full">
+        <img
+          [src]="image | productImage"
+          alt="Producto"
+          class="object-cover w-full"
+        >
       </div>
      }
   </div>
