--- a/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -1,1 +1,14 @@
-<p>gender-page works!</p>,
+<h1 class="text-3xl font-bold font-monserrat">
+  Todos los productos
+  <span class="text-accent">{{ gender() }}</span>
+</h1>
+
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-3">
+  @for (product of productResource.value()?.products; track $index) {
+    <app-product-card [product]="product" />
+  }@empty {
+    <p>No hay productos</p>
+  }
+</div>
+
+
