--- a/src/app/store-front/pages/product-page/product-page.component.html
+++ b/src/app/store-front/pages/product-page/product-page.component.html
@@ -5,14 +5,14 @@
 }
 
 @if( productResource.hasValue() ) {
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-    <product-carousel  [images]="productResource.value().images"/>
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-3">
+    <product-carousel  [images]="productResource.value()?.images ?? []"/>
     <div>
       <h2 class="text-2xl font-bold font-monserrat">{{ productResource.value().title }}</h2>
+      <div class="divider"></div>
+      <p>
+        {{ productResource.value()?.description }}
+      </p>
     </div>
-    <div class="divider"></div>
-    <p>
-      {{ productResource.value().description }}
-    </p>
   </div>
 }
