Agregando paginacion y almacenamiento en cache

--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -7,7 +7,7 @@
         <img
           [src]="image | productImage"
           alt="Producto"
-          class="object-cover w-full"
+          class="object-cover w-full animate-fade-in"
         >
       </div>
      }
