Validando campos y actualizando productos

--- a/src/app/store-front/components/front-navbar/front-navbar.component.html
+++ b/src/app/store-front/components/front-navbar/front-navbar.component.html
@@ -67,6 +67,10 @@
     </ul>
   </div>
   <div class="navbar-end gap-4">
+    @if ( authService.isAdmin() ) {
+      <a routerLink="/admin">Admin Panel</a>
+    }
+
     @if ( authService.authStatus() == 'authenticated' ) {
       <button class="btn btn-ghost">
         {{ authService.user()?.fullName }}
