--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -132,3 +132,10 @@
     <input type="file" class="file-input file-input-bordered w-full mt-4" />
   </div>
 </form>
+
+@if ( wasSaved()) {
+  <div class="alert alert-success fixed bottom-4 right-4 w-80 animate-fade-in">
+    <span>Datos actiualizados correctamente</span>
+  </div>
+}
+
