--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -10,6 +10,14 @@
           class="object-cover w-full animate-fade-in"
         >
       </div>
+     } @empty {
+        <div class="swiper-slide">
+          <img
+            [src]="null | productImage"
+            alt="Producto"
+            class="object-cover w-full animate-fade-in"
+          >
+        </div>
      }
   </div>
   <!-- If we need pagination -->
